# mcp_swagger

./: .gitignore  .yamllint.yml  Dockerfile  README.md  SSE_BUG_REPORT.md  main.py  pyproject.toml  requirements.txt  run_test.sh  test_response_wrapper.py  test_sse.py  test_sse_fix.py  test_sse_server.py  verify_streamable_http.py
.github/workflows/: docker-validation.yml  python-tests.yml  yaml-validation.yml
api_client/: client.py  security.py
filters/: __init__.py  swagger_filter.py
generators/: __init__.py  tool_generator.py
models/: __init__.py  parameter.py
parsers/: __init__.py  parameter_parser.py  schema_parser.py
src/mcp_swagger/: __init__.py  main.py
src/mcp_swagger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_swagger/api_client/: __init__.py  client.py  security.py
src/mcp_swagger/config/: __init__.py  cli.py  settings.py
src/mcp_swagger/filters/: swagger_filter.py
src/mcp_swagger/generators/: tool_generator.py
src/mcp_swagger/models/: __init__.py  responses.py  swagger.py  tool.py
src/mcp_swagger/parsers/: parameter_parser.py  schema_parser.py  spec_loader.py
src/mcp_swagger/utils/: __init__.py  logging.py  output.py  response_filter.py
tests/: test_list_response_handling.py  test_mcp_swagger_server.py  test_parameter_parser.py  test_path_level_parameters.py  test_response_filter.py  test_schema_parser.py  test_security_handler.py  test_settings.py  test_spec_loader.py  test_swagger_filter.py  test_tool_generator.py
utils/: __init__.py
